fix(@clayui/css): LPD-66700 Adjust custom checkbox and radio vertical alignment

--- a/packages/clay-css/src/scss/cadmin/variables/_custom-forms.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_custom-forms.scss
@@ -149,7 +149,7 @@ $cadmin-custom-control-label: map-deep-merge(
 			height: $cadmin-custom-control-indicator-size,
 			left: 0,
 			position: relative,
-			top: 2px,
+			top: 4px,
 			transition: clay-enable-transitions($cadmin-custom-forms-transition),
 			width: $cadmin-custom-control-indicator-size,
 			z-index: 0,
@@ -162,7 +162,7 @@ $cadmin-custom-control-label: map-deep-merge(
 			height: 24px,
 			left: -4px,
 			position: absolute,
-			top: -2px,
+			top: $cadmin-custom-control-indicator-position-top,
 			width: 24px,
 			z-index: 0,
 		),
